objects/MRS_Layer_Syncing_Status__c.object
<CustomObject>
    <description>Store sync status of MRS Layer Association and MSIH</description>
    <fields>
        <fullName>Error_Syncing_at_MSIH__c</fullName>
        <label>Error_Syncing_at_MSIH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Synced_With_MSIH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to determine its associated layer is synced with MSIH or not</description>
        <label>Is_Synced_With_MSIH?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MRS_Layer_Association__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MRS Layer Association</label>
        <referenceTo>MRS_Layer_Association__c</referenceTo>
        <relationshipLabel>MRS Layer Syncing Status</relationshipLabel>
        <relationshipName>MRS_Layer_Syncing_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MRS Layer Syncing Status</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MRS_Layer_Association__c</columns>
        <columns>Is_Synced_With_MSIH__c</columns>
        <columns>Error_Syncing_at_MSIH__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MRS Layer Syncing Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>